<resources>
    <string name="app_name">Countries App</string>
    <string name="country">Country</string>
    <string name="more_info">More Info</string>
    <string name="country_details">Country Details</string>
    <string name="wiki_page">Wiki Page</string>
    <string name="textview">TextView</string>
    <string name="image_for_country_s_flag">image for country\'s flag</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="country_flag">country flag</string>
</resources>