<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".DetailsActivity">

  <TextView
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_margin="20dp"
      android:gravity="center"
      android:padding="10dp"
      android:text="@string/country_details"
      android:textSize="24sp"
      android:textStyle="bold"
      tools:ignore="TextSizeCheck" />

  <TextView
      android:id="@+id/nameTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:padding="5dp"
      android:text="@string/textview1"
      android:textSize="24sp" />

  <TextView
      android:id="@+id/capitalTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:padding="5dp"
      android:text="@string/textview2"
      android:textSize="24sp" />

  <TextView
      android:id="@+id/continentTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:padding="5dp"
      android:text="@string/textview3"
      android:textSize="24sp" />

  <TextView
      android:id="@+id/currencyTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:padding="5dp"
      android:text="@string/textview4"
      android:textSize="24sp" />

  <Button
      android:id="@+id/button1"
      android:layout_width="180dp"
      android:layout_height="70dp"
      android:layout_gravity="center"
      android:layout_margin="20dp"
      android:backgroundTint="#3F51B5"
      android:gravity="center"
      android:padding="10dp"
      android:text="@string/wiki_page"
      android:textSize="24sp" />
</LinearLayout>


