<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD"
    android:orientation="vertical"
    tools:context=".CountryActivity">

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/country"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/country_flag"
        android:padding="10dp"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text=""
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:backgroundTint="#3F51B5"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/more_info"
        android:textColorLink="#3F51B5"
        android:textSize="24sp" />

</LinearLayout>